# HashCmp

./: .gitignore  CMakeLists.txt  changes.md  hash_wrappers.cpp  hash_wrappers.h  hashes.cpp  hashes.h  log_duration.h  london_crime_tests.cpp  london_crime_tests.h  main.cpp  random_world_tests.cpp  random_world_tests.h  readme.md  tests.cpp  tests_with_images.cpp  tests_with_images.h
CSV_Parser/: CMakeLists.txt
HashLib/: CMakeLists.txt  hash_functions.cpp  hash_functions.h  other_hash_functions.cpp  other_hash_functions.h
HashLib/cityhash/: city.cc  city.h
HashLib/farmhash/: farmhash.cc  farmhash.h
HashLib/fnv_hash_32/: const_fvn_hash.h
HashLib/fnv_hash_64_128/: int128.cpp  int128.h
HashLib/jenkins_hash/: lookup3.cpp  lookup3.h
HashLib/rolling_hash/: cyclichash.h  mersennetwister.h  threewisehash.h
HashLib/spooky_hash/: spooky.h
HashLib/super_fast_hash/: super_fast_hash.cpp  super_fast_hash.h
HashLib/t1ha/: t1ha.h
HashLib/xx_hash/: xxhash.h
data/: random_words  random_words_report_with_32_bits_hashes  random_words_report_with_64_bits_hashes  report.txt
graphics/: distribution_statistics.py  docx_report.py  eng_words_statistics.py  gen_blocks_statistics.py  graphics.py  helper.py
hashes/: other_hash_functions.cpp  other_hash_functions.h  various_hash_functions.cpp  various_hash_functions.h
libs/HashLib/: CMakeLists.txt  hash_functions.cpp  hash_functions.h
libs/HashLib/cityhash/: city.cc  city_inline.h
libs/HashLib/cityhash/inline/: city.h
libs/HashLib/farmhash/: farmhash_inline.h
libs/HashLib/farmhash/inline/: farmhash.h
libs/HashLib/fasthash/inline/: fasthash.h
libs/HashLib/highwayhash/: highwayhash_test.cc  state_helpers.h
libs/HashLib/murmur_hash/: MurmurHashInline.h
libs/HashLib/mx3/: mx3.h
libs/HashLib/nmhash/: README.md
libs/HashLib/pearson/inline/: pearson.h
libs/HashLib/pengyhash/: pengyhash.h
libs/HashLib/rolling_hash/: characterhash.h  cyclichash.h  generalhash.h  mersennetwister.h
libs/HashLib/siphash/: siphash_impl.h  siphash_inline.h
libs/HashLib/siphash/inline/: siphash.h
libs/HashLib/spooky_hash/: spooky_inline.h
libs/HashLib/spooky_hash/inline/: spooky.h
libs/HashLib/super_fast_hash/: super_fast_hash.h
libs/HashLib/t1ha/: t1ha0.c  t1ha1.c  t1ha2.c
libs/HashLib/t1ha/inline/: t1ha_inline.h
libs/HashLib/xx_hash/: xxhash.h
reports/: avalanche_test_32.txt  avalanche_test_64.txt  random_words_report_with_32_bits_hashes.txt  random_words_report_with_64_bits_hashes.txt  report_cycles_crashes  report_english_words_with_32_bits_hashes.txt  report_english_words_with_64_bits_hashes.txt  report_random_1000000_words_(1000-1000_world_size)_with_32_bits_hashes.txt  report_random_1000000_words_(1000-1000_world_size)_with_64_bits_hashes.txt  report_random_1000000_words_(500-1500_world_size)_with_32_bits_hashes.txt  report_random_1000000_words_(500-1500_world_size)_with_64_bits_hashes.txt  report_random_100000_words_(5000-15000_world_size)_with_32_bits_hashes.txt  report_random_100000_words_(5000-15000_world_size)_with_64_bits_hashes.txt  report_random_5000000_words_(10-30_world_size)_with_32_bits_hashes.txt  report_random_5000000_words_(10-30_world_size)_with_64_bits_hashes.txt  report_random_5000000_words_(100-300_world_size)_with_32_bits_hashes.txt  report_random_5000000_words_(100-300_world_size)_with_64_bits_hashes.txt  report_random_5000000_words_(50-150_world_size)_with_32_bits_hashes.txt  report_random_5000000_words_(50-150_world_size)_with_64_bits_hashes.txt  report_random_500000_words_(1000-3000_world_size)_with_32_bits_hashes.txt  report_random_500000_words_(1000-3000_world_size)_with_64_bits_hashes.txt  report_random_words_with_32_bits_hashes.txt  report_random_words_with_64_bits_hashes.txt  report_similar_words_with_32_bits_hashes.txt  report_similar_words_with_64_bits_hashes.txt  test_with_images_with_32_bits_hashes.txt  test_with_images_with_64_bits_hashes.txt
reports (копия)/: avalanche_effect_Bernstein's hash djb2 32.txt  avalanche_effect_CityHash32.txt  avalanche_effect_CityHash64.txt  avalanche_effect_CityHash64WithSeed.txt  avalanche_effect_CityHash64WithSeeds.txt  avalanche_effect_FNV-1a hash 32.txt  avalanche_effect_FNV-1a hash 64.txt  avalanche_effect_FarmHash32.txt  avalanche_effect_FarmHash32WithSeed.txt  avalanche_effect_FarmHash64.txt  avalanche_effect_FarmHash64WithSeed.txt  avalanche_effect_FarmHash64WithSeeds.txt  avalanche_effect_FastHash32.txt  avalanche_effect_FastHash64.txt  avalanche_effect_Jenkins hash (One at a time).txt  avalanche_effect_Jenkins hash (lookup3 - big).txt  avalanche_effect_Jenkins hash (lookup3 - little).txt  avalanche_effect_MetroHash64_1.txt  avalanche_effect_MetroHash64_2.txt  avalanche_effect_MurmurHash1Aligned.txt  avalanche_effect_MurmurHash2.txt  avalanche_effect_MurmurHash64A.txt  avalanche_effect_MurmurHash64B.txt  avalanche_effect_PJW Hash 32.txt  avalanche_effect_PJW Hash 64.txt  avalanche_effect_PearsonHash32.txt  avalanche_effect_PearsonHash64.txt  avalanche_effect_RollingHash (BuzHash32).txt  avalanche_effect_RollingHash (BuzHash64).txt  avalanche_effect_SDBM 32.txt  avalanche_effect_SDBMHash64.txt  avalanche_effect_Spooky hash 32.txt  avalanche_effect_Spooky hash 64.txt  avalanche_effect_SuperFastHash.txt  avalanche_effect_T1HA0 32be.txt  avalanche_effect_T1HA0 32le.txt  avalanche_effect_T1HA1 be.txt  avalanche_effect_T1HA1 le.txt  avalanche_effect_T1HA2 atonce.txt  avalanche_effect_XXH3_64bits.txt  (+51 more)
src/: check_distribution.cpp  check_distribution.h  collision_tests.cpp  collision_tests.h  count_collisions.cpp  count_collisions.h  distribution_tests.cpp  distribution_tests.h  generators.cpp  generators.h  hash_wrappers.cpp  hash_wrappers.h  hashes.cpp  hashes.h  helper_structs.cpp  helper_structs.h  images_tests.cpp  img.cpp  img.h  jpeg_image.cpp  jpeg_image.h  local_tests.cpp  log_duration.cpp  log_duration.h  london_crime_tests.cpp  london_crime_tests.h  main.cpp  random_words_test.cpp  random_world_tests.cpp  test_parameters.cpp  test_parameters.h  tests.h  tests_with_images.cpp  tests_with_images.h  words_test.cpp  words_test_.cpp  (+3 more)
(+186 files in other folders)
