cmake_minimum_required(VERSION 3.17)
project(ThesisWork)

set(CMAKE_CXX_STANDARD 20)
set(OPTIMIZE_FLAGS "-march=native -O3 -pipe")
set(INLINE_FLAGS "-Winline --param inline-unit-growth=10000 --param max-inline-insns-single=10000")
set(CMAKE_C_FLAGS "${OPTIMIZE_FLAGS} -pthread -Werror -maes")
set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -lboost_json -ljpeg -ltbb")

set(LIBS libs)
add_subdirectory(${LIBS}/HashLib HashLibBuildDir)
set(LIBJPEG_DIR ${LIBS}/libjpeg)

set(SRC "src/cpp")
set(UTILITIES ${SRC}/log_duration.h ${SRC}/log_duration.cpp ${SRC}/generator.h ${SRC}/generator.cpp)
set(WRAPPERS ${SRC}/hash_wrappers.h ${SRC}/hash_wrappers.cpp ${SRC}/hashes.h ${SRC}/hashes.cpp)
set(HELP_STRUCTS ${SRC}/test_parameters.h ${SRC}/test_parameters.cpp)
set(IMG_FILES ${SRC}/img.h ${SRC}/img.cpp ${SRC}/jpeg_image.h ${SRC}/jpeg_image.cpp)
set(CONCURRENCY ${SRC}/concurrency.h)
set(GENERAL_FILES ${UTILITIES} ${WRAPPERS} ${HELP_STRUCTS} ${IMG_FILES} ${CONCURRENCY})

set(DIST_TESTS ${SRC}/distribution_tests.h ${SRC}/distribution_tests.cpp)
set(GEN_TESTS ${SRC}/generated_tests.h ${SRC}/generated_tests.cpp)
set(ENG_TESTS ${SRC}/english_tests.h ${SRC}/english_tests.cpp)
set(SPEED_TESTS ${SRC}/speed_tests.h ${SRC}/speed_tests.cpp)
set(AVALANCHE_TESTS ${SRC}/avalanche_tests.h ${SRC}/avalanche_tests.cpp)
set(IMAGES_TESTS ${SRC}/images_tests.h ${SRC}/images_tests.cpp)
set(TESTS ${WORDS_TESTS} ${DIST_TESTS} ${GEN_TESTS} ${ENG_TESTS} ${SPEED_TESTS} ${AVALANCHE_TESTS} ${IMAGES_TESTS})

set(MAIN ${SRC}/main.cpp src/cpp/my_assert.cpp src/cpp/my_assert.h src/cpp/logger.h)
add_executable(tests ${MAIN} ${TESTS} ${GENERAL_FILES})
target_include_directories(tests PUBLIC "${LIBS}/HashLib" "${LIBS}/PCG")
target_link_libraries(tests HashLib)